# stone-sec

./: .gitignore  README.md  pyproject.toml
.github/actions/stone-sec/: action.yaml
.github/workflows/: ci-test.yml
docs/: 01_project_identity.md  02_v1_scope.md  03_architecture.md  04_cli_contract.md  05_rule_engine_spec.md  06_llm_integration_spec.md  07_execution_roadmap.md
stone_sec/: all_vuln_sample.py  cli.py  test_file.py
stone_sec.egg-info/: PKG-INFO  SOURCES.txt
stone_sec/engine/: parser.py  scanner.py  severity.py
stone_sec/engine/rules/: deserialization_rules.py  dynamic_import_rules.py  eval_rule.py  exec_rule.py  insecure_protocol_rules.py  network_tls_rules.py  os_system_rule.py  runner.py  sql_injection_rules.py  ssl_context_rules.py  subprocess_shell_rule.py
stone_sec/llm/: base.py  ollama_provider.py  prompt.py
stone_sec/models/: finding.py
stone_sec/output/: json_formatter.py
tests/fixtures/vulnerable/: ai_test.py  all_m_rules_test_output.json  all_m_rules_test_sample.py  all_rules_test_sample.py  test_file.py
tests/rules/: __init__.py  test_deserialization_rules.py  test_dynamic_import_rules.py  test_exec_rule.py  test_insecure_protocol_rules.py  test_network_tls_rules.py  test_sql_injection_rules.py  test_ssl_context_rules.py
